test/errors/invalid_decls.aw
foreign import : C {
function invalid_func(...)
}
